overhaul to update to current ember/bootstrap/etc

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,8 +1,11 @@
 .app-container
-  padding-top: 60px
+  padding-top: 20px
 
 .ember-text-area
   width: 350px
 
-.well
+.card-body
   word-wrap: break-word
+
+.card
+  margin-bottom: 10px
